package com.ommani.checkers.game;

public enum Colour {
    WHITE, BLACK
}
