package com.ommani.checkers.game.pieces;

import com.ommani.checkers.game.Colour;
import com.ommani.checkers.game.board.Position;

public class King extends Piece {
    public King(Position position, Colour colour) {
        super(position, colour);
    }
}
