package com.ommani.checkers.game.pieces;

import com.ommani.checkers.game.Colour;
import com.ommani.checkers.game.board.Position;

public class Pawn extends Piece{
    public Pawn(Position position, Colour colour) {
        super(position, colour);
    }

}
