@startuml
'https://plantuml.com/class-diagram

class Game{
Board board
Players players

Player getPlayerOne()
void setUpBoard()
}

Game *-- Player
Game *-- Board

class Player{
Colour colour
}

class Piece{
Position position
List<Move> moves
Colour colour
}
Piece <|-- King
Piece <|-- Pawn

class King{}
class Pawn{}

Piece o-- Move
Piece *-- Colour

abstract class Move{
Position from
Position To
Move nextMove
}
Move o-- Position

class Board{
List<Piece> pieces
Position [][] tiles
}
Board *-- Piece
Board *-- Position


class Position{
Colour colour;

}
Position *-- Colour

class Colour
class Contoller
class Timer

@enduml